@@ -25,10 +25,19 @@ TypeHandle ModelFlattenRequest::_type_handle;
 ////////////////////////////////////////////////////////////////////
 AsyncTask::DoneStatus ModelFlattenRequest::
 do_task() {
-  // We make another instance of the original node, so we can safely
-  // flatten that without affecting the original copy.
+  // We make another instance of the original node, so we can safely flatten
+  // that without affecting the original copy.
   NodePath np("flatten_root");
-  np.attach_new_node(_orig);
+
+  // Except if we try to attach a node without parents, this will cause the
+  // original NodePath to be affected, so we have to make a (shallow) copy.
+  if (_orig->get_num_parents() == 0) {
+    PT(PandaNode) copy = _orig->make_copy();
+    copy->copy_children(_orig);
+    np.attach_new_node(copy);
+  } else {
+    np.attach_new_node(_orig);
+  }
   np.flatten_strong();
   _model = np.get_child(0).node();
   _is_ready = true;
